| Summary: | ASTERISK-29824: It's hard to make changes to bundled pjproject | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2021-12-28 08:36:56.000-0600 | Date Closed: | 2022-01-07 09:56:18.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Third-Party/pjproject |
| Versions: | 16.23.0 18.9.0 19.1.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Trying to create and test changes to pjproject in a bundled environment is a pain for several reasons:
* The source directory is not scanned for code changes so you have to keep forcing rebuilds. * The source directory isn't a git repo so you can't easily create patches, do bisects, etc. * Accidentally doing a {{make distclean}} wipes out the source directory, and your changes. etc. | ||
| Comments: | By: Friendly Automation (friendly-automation) 2022-01-07 09:56:19.218-0600 Change 17838 merged by Friendly Automation: bundled_pjproject: Make it easier to hack [https://gerrit.asterisk.org/c/asterisk/+/17838|https://gerrit.asterisk.org/c/asterisk/+/17838] By: Friendly Automation (friendly-automation) 2022-01-07 09:57:48.146-0600 Change 17718 merged by Friendly Automation: bundled_pjproject: Make it easier to hack [https://gerrit.asterisk.org/c/asterisk/+/17718|https://gerrit.asterisk.org/c/asterisk/+/17718] By: Friendly Automation (friendly-automation) 2022-01-07 10:00:37.062-0600 Change 17837 merged by Friendly Automation: bundled_pjproject: Make it easier to hack [https://gerrit.asterisk.org/c/asterisk/+/17837|https://gerrit.asterisk.org/c/asterisk/+/17837] By: Friendly Automation (friendly-automation) 2022-01-07 10:00:38.652-0600 Change 17836 merged by Friendly Automation: bundled_pjproject: Make it easier to hack [https://gerrit.asterisk.org/c/asterisk/+/17836|https://gerrit.asterisk.org/c/asterisk/+/17836] | ||